@@ -11,7 +11,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
-import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import lombok.extern.log4j.Log4j2;
@@ -82,27 +81,33 @@ public class LinkUpdateScheduler {
     }
 
     private void updateStackOverFlowLink(Link link, Timestamp now) throws URISyntaxException {
-        List<String> fragments = List.of(link.getUrl().toString().split("/"));
-        int idOfQuestion = Integer.parseInt(System.getenv("idQuestionName"));
-        StackOverFlowQuestion
-            question =
-            stackOverFlowClient.fetchQuestion(Long.parseLong(fragments.get(idOfQuestion))).getItems()
-                .getFirst();
+
+        String path = link.getUrl().getPath();
+        Pattern pattern = Pattern.compile("/questions/(?<id>\\d+)");
+        Matcher matcher = pattern.matcher(path);
+        StringBuilder description = new StringBuilder();
+
+        StackOverFlowQuestion question = stackOverFlowClient
+            .fetchQuestion(Long.parseLong(matcher.group("id")))
+            .getItems()
+            .get(0);
         Timestamp lastActivity = question.getLastActivityAsTimestamp();
 
         if (lastActivity.after(link.getLastCheckTime())) {
-            String description = "обновление данных : ";
+            description.append("обновление данных : ");
             jdbcLinkService.updateLinkLastCheckTime(link.getId(), now);
 
             if (question.getAnswerCount() > jdbcLinkService.getLinkPropertiesById(link.getId()).getCountOfAnswer()) {
-                description += "\n"
-                    + "появился новый ответ";
+                description
+                    .append("\n")
+                    .append("появился новый ответ");
                 jdbcLinkService.updateCountOfAnswersById(link.getId(), question.getAnswerCount());
             }
 
             if (question.getCommentCount() > jdbcLinkService.getLinkPropertiesById(link.getId()).getCountOfComments()) {
-                description += "\n"
-                    + "появился новый комментарий";
+                description
+                    .append("\n")
+                    .append("появился новый комментарий");
                 jdbcLinkService.updateCountOfCommentsById(link.getId(), question.getCommentCount());
             }
 
